# Cato-SDK

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 01_print_stream.py  02_csv_logger.py  03_live_plot.py  04_gesture_monitor.py
examples/visualizer/: serve.py
examples/visualizer/static/: index.html
src/cato/: __init__.py  device.py  exceptions.py  fusion.py  models.py  ota.py  protocol.py
tests/: test_device.py  test_fusion.py  test_ota.py  test_protocol.py
