[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cato-sdk"
version = "0.1.0"
description = "Python SDK for realtime IMU data from the Auli.tech Cato wearable"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "RCHI Lab, Carnegie Mellon University" }]
requires-python = ">=3.9"
dependencies = [
    "hidapi>=0.14",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Repository = "https://github.com/RCHI-Lab/Cato-SDK"

[project.optional-dependencies]
examples = [
    "matplotlib>=3.5",
    "websockets>=11",
]
dev = [
    "pytest>=7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cato"]
